--- a/dhani.html
+++ b/dhani.html
@@ -43,6 +43,8 @@ button {
   background: #ff165d;
   color: white;
   transition: 0.2s;
+  position: relative;
+  z-index: 10;
 }
 
 button:hover {
@@ -60,6 +62,7 @@ button:hover {
   display: none;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
 
 #popupContent {
@@ -142,14 +145,17 @@ color:white;font-size:1.5em;opacity:0.8;">Dhani 💖 Baby</h2>
   <div id="popupContent"></div>
 </div>
 
-<!-- Background Song -->
-<audio id="bgMusic" src="https://p.scdn.co/mp3-preview/7de802e1d4de2c6a62e99c58f5f5c927cb66c72e?cid=774b29d4f13844c495f206cafdad9c86" autoplay loop></audio>
+<!-- Background Song (will play after first click) -->
+<audio id="bgMusic" src="https://p.scdn.co/mp3-preview/7de802e1d4de2c6a62e99c58f5f5c927cb66c72e?cid=774b29d4f13844c495f206cafdad9c86" loop></audio>
 
 <script>
 let opened = 0;
 
 // LOVE MAP MESSAGES
 function showMessage(type) {
+  // Start music on first click (works on mobile)
+  document.getElementById("bgMusic").play().catch(()=>{});
+
   const messages = {
     ifUWant: "I know you would never let that go, but I DID WANT to talk to u. I just suck at words sometimes, babe.",
     findingAgain: "I like to think part of the universe's grand (dumbass) plan is for us to meet again. I will never regret this, sweetheart, whatever the outcome.",
@@ -163,4 +169,96 @@ function showMessage(type) {
 
   opened++;
   if (opened >= 4) {
-    document.getElementById("finalQues
+    document.getElementById("finalQuestion").style.display = "block";
+    spawnNoButton();
+  }
+}
+
+function closePopup() {
+  document.getElementById("popup").style.display = "none";
+}
+
+// RUNAWAY NO BUTTON
+const noBtn = document.getElementById("noBtn");
+
+function spawnNoButton() {
+  moveNo();
+  document.addEventListener("mousemove", dodgeCursor);
+  noBtn.addEventListener("touchstart", moveNo);
+  noBtn.addEventListener("click", moveNo);
+}
+
+function moveNo() {
+  const x = Math.random() * (window.innerWidth - 150);
+  const y = Math.random() * (window.innerHeight - 80);
+  noBtn.style.left = x + "px";
+  noBtn.style.top = y + "px";
+}
+
+function dodgeCursor(e) {
+  const rect = noBtn.getBoundingClientRect();
+  const dx = e.clientX - (rect.left + rect.width/2);
+  const dy = e.clientY - (rect.top + rect.height/2);
+  const distance = Math.sqrt(dx*dx + dy*dy);
+
+  if (distance < 120) {
+    moveNo();
+  }
+}
+
+// FLOATING HEARTS
+function spawnHearts() {
+  setInterval(() => {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = ["💖","💘","💕","💗","💓","💞","💝"][Math.floor(Math.random()*7)];
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = (20 + Math.random()*30) + "px";
+    heart.style.animationDuration = (4 + Math.random()*4) + "s";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 8000);
+  }, 300);
+}
+spawnHearts();
+
+// CONFESSION WHEN YES
+function yes() {
+  document.body.innerHTML = `
+  <div style="padding:40px;text-align:center;color:white;">
+    <h1 style="font-size:3em;">💖 Happy Valentine’s Day, Baby 💖</h1>
+    <p style="font-size:1.6em;">
+      sweetheart,<br><br>
+      What you and I have is irreplaceable. You have my heart and I promise to take care of yours. I like to think that the universe has a better sense of whatever is going on and it will all make sense someday. But for now, I have you and that's all I need to be happy. Happy Valentines Day, my love.
+    </p>
+  </div>
+  `;
+  confetti();
+  spawnHearts();
+}
+
+// CONFETTI
+function confetti() {
+  for(let i=0;i<200;i++){
+    let c = document.createElement("div");
+    c.style.position="fixed";
+    c.style.width="10px";
+    c.style.height="10px";
+    c.style.borderRadius="50%";
+    c.style.background = ["#ff165d","#fff","#ffd700","#ff69b4"][Math.floor(Math.random()*4)];
+    c.style.left = Math.random()*100+"%";
+    c.style.top = "-10px";
+    document.body.appendChild(c);
+
+    let fall = setInterval(()=>{
+      c.style.top = (parseFloat(c.style.top)+3)+"px";
+      if(parseFloat(c.style.top) > window.innerHeight){
+        clearInterval(fall);
+        c.remove();
+      }
+    },15);
+  }
+}
+</script>
+
+</body>
+</html>
