--- a/dhani.html
+++ b/dhani.html
@@ -9,16 +9,32 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
 <style>
+/* BODY & BACKGROUND */
 body {
   margin: 0;
   padding: 30px;
   font-family: "Times New Roman", serif;
   text-align: center;
   color: white;
-  background: linear-gradient(160deg, #ffcccb, #ffb6c1, #ff69b4);
+  background: linear-gradient(160deg, #FFD6E0, #FFB6C1, #FF69B4, #FF1493);
   overflow: hidden;
+  position: relative;
 }
 
+/* Soft overlay for warmth and glow */
+body::before {
+  content: '';
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background: radial-gradient(circle at top left, rgba(255,255,255,0.1), rgba(255,182,193,0.15));
+  pointer-events:none;
+  z-index:0;
+}
+
+/* HEADINGS & SUBTITLE */
 h1 {
   font-size: 3em;
   animation: pulse 2s infinite;
@@ -34,6 +50,7 @@ h2 {
   margin-bottom: 25px;
 }
 
+/* MAP BUTTONS */
 .map {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -60,6 +77,7 @@ button:hover {
   background: #ff003c;
 }
 
+/* POPUP */
 #popup {
   position: fixed;
   top: 0;
@@ -82,6 +100,7 @@ button:hover {
   font-size: 1.2em;
 }
 
+/* FINAL QUESTION */
 #finalQuestion {
   display: none;
   margin-top: 25px;
@@ -103,7 +122,7 @@ button:hover {
   position: absolute;
 }
 
-/* HEARTS ANIMATION */
+/* HEART ANIMATIONS */
 @keyframes floatHearts {
   0% { transform: translateY(0) scale(0.8); opacity: 0; }
   50% { opacity: 1; }
@@ -160,7 +179,7 @@ Click everything to unlock the final question 🗺️
 <script>
 let opened = 0;
 
-// MESSAGES
+// BUTTON MESSAGES
 const messages = {
   ifUWant: "I know you would never let that go, but I DID WANT to talk to u. I just suck at words sometimes, babe.",
   findingAgain: "I like to think part of the universe's grand (dumbass) plan is for us to meet again. I will never regret this, sweetheart, whatever the outcome.",
@@ -168,10 +187,9 @@ const messages = {
   promoDeal: "If you say yes to the question below, you have unlimited access to tease me about my jurrasic ass, the sorry guy meme and 100 kisses ;)"
 };
 
+// SHOW MESSAGE & START MUSIC
 function showMessage(type) {
-  // start music on first interaction
   document.getElementById("bgMusic").play().catch(()=>{});
-
   document.getElementById("popupContent").innerHTML = messages[type] + "<br><br><button onclick='closePopup()'>Close</button>";
   document.getElementById("popup").style.display = "flex";
 
@@ -210,7 +228,7 @@ function dodgeCursor(e){
   if(distance < 120){ moveNo(); }
 }
 
-// FLOATING HEARTS
+// FLOATING HEARTS + HINDI WORDS
 function spawnHearts(){
   setInterval(()=>{
     const heart = document.createElement("div");
@@ -240,7 +258,7 @@ function yes(){
   spawnHearts();
 }
 
-// CONFETTI EFFECT
+// CONFETTI
 function confetti(){
   for(let i=0;i<200;i++){
     let c=document.createElement("div");
